--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -7,8 +7,13 @@ RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
+    tzdata \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Настройка временной зоны (современный способ)
+ENV TZ=Europe/Moscow
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Установка зависимостей
 COPY requirements.txt .
